# srm-credit-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_USAGE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cf5cd043f352_create_financial_schema.py
backend/scripts/: seed_demo.py
backend/src/app/: main.py
backend/src/app/api/: dependencies.py  error_handlers.py  health.py
backend/src/app/core/: config.py  logging.py
backend/src/app/domain/: enums.py  exceptions.py
backend/src/app/infrastructure/db/: base.py  engine.py
backend/src/app/infrastructure/db/models/: __init__.py  currency.py  receivable.py  settlement.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_schema.py
backend/tests/unit/api/: test_error_handlers.py  test_health.py
docs/database/: ddl.sql  er-diagram.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css
frontend/src/app/: App.test.tsx  App.tsx
